[tool.poetry]
name = "benisbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
pytz = "^2021.1"
replit = "^2.0.0"
schedule = "^1.0.0"
speedtest = "^0.0.1"
speedtest-cli = "^2.1.3"
pyspeedtest = "^1.2.7"
speedtestpy = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
